main에서 write로 올라가는 버튼 만들다 말았음

--- a/KimNinehundred/Sooltudy/app/src/main/AndroidManifest.xml
+++ b/KimNinehundred/Sooltudy/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:name=".SecondActivity"
             android:label="@string/title_activity_second" >
         </activity>
+
+        <activity android:name=".SignupActivity" />
     </application>
 
 </manifest>
