--- a/KimHunJin/Sooltudy/app/src/main/AndroidManifest.xml
+++ b/KimHunJin/Sooltudy/app/src/main/AndroidManifest.xml
@@ -8,13 +8,33 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".aaa.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".aaa.SecondActivity"
+            android:label="@string/title_activity_second" >
+        </activity>
+        <activity
+            android:name=".aaa.SignUpActivity"
+            android:label="@string/title_activity_sign_up" >
+        </activity>
+        <activity
+            android:name=".aaa.SQLActivity"
+            android:label="@string/title_activity_sql" >
+        </activity>
+        <activity
+            android:name=".aaa.DiaryActivity"
+            android:label="@string/title_activity_diary" >
+        </activity>
+        <activity
+            android:name=".sooltudyu.SQLiteTest"
+            android:label="@string/title_activity_sqlite_test" >
         </activity>
     </application>
 
