--- a/KimNinehundred/Sooltudy/app/src/main/AndroidManifest.xml
+++ b/KimNinehundred/Sooltudy/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             android:name=".SecondActivity"
             android:label="@string/title_activity_second" >
         </activity>
+        <activity
+            android:name=".WriteActivity"
+            android:label="@string/title_activity_write" >
+        </activity>
     </application>
 
 </manifest>
