--- a/KimHunJin/Sooltudy/app/src/main/AndroidManifest.xml
+++ b/KimHunJin/Sooltudy/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".aaa.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".firstapp.HomeActivity"
+            android:label="@string/title_activity_home" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,24 +17,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".aaa.SecondActivity"
-            android:label="@string/title_activity_second" >
+            android:name=".firstapp.StarActivity"
+            android:label="@string/title_activity_star" >
         </activity>
         <activity
-            android:name=".aaa.SignUpActivity"
-            android:label="@string/title_activity_sign_up" >
-        </activity>
-        <activity
-            android:name=".aaa.SQLActivity"
-            android:label="@string/title_activity_sql" >
-        </activity>
-        <activity
-            android:name=".aaa.DiaryActivity"
+            android:name=".firstapp.DiaryActivity"
             android:label="@string/title_activity_diary" >
         </activity>
         <activity
-            android:name=".sooltudyu.SQLiteTest"
-            android:label="@string/title_activity_sqlite_test" >
+            android:name=".firstapp.DiaryListActivity"
+            android:label="@string/title_activity_diary_list" >
+        </activity>
+        <activity
+            android:name=".firstapp.ShowDiaryActivity"
+            android:label="@string/title_activity_show_diary" >
         </activity>
     </application>
 
